--- a/www/src/assets/layout.css
+++ b/www/src/assets/layout.css
@@ -18,7 +18,7 @@ html,body {
 }
 
 a {
-  color: red;
+  color: #0057b7;
 }
 .links a{
   /* margin: 0.25rem; */
@@ -31,7 +31,8 @@ ul.tags {
 }
 ul.tags li {
   display: inline-block;
-  background: #92d3f5;
+  background: #0057b7;
+  color: #0057b7;
   padding: 0 0.5rem;
   margin: 0.25rem;
   border-radius: 3px;
