this makes links visible

--- a/www/src/assets/layout.css
+++ b/www/src/assets/layout.css
@@ -32,7 +32,7 @@ ul.tags {
 ul.tags li {
   display: inline-block;
   background: #0057b7;
-  color: #0057b7;
+  color: #ffffff;
   padding: 0 0.5rem;
   margin: 0.25rem;
   border-radius: 3px;
