--- a/next-blog/styles/globals.css
+++ b/next-blog/styles/globals.css
@@ -1,3 +1,6 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+.text-xxs {
+  font-size: 0.55rem;
+}
